subir tutorial con vue a mi repo

--- a/Pelea/index.html
+++ b/Pelea/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
       <div class="col-4">
-        <img src="media/heroe.jpg" style="max-height: 70%; max-width: 70%;">
+        <img src="media/heroe.jpg" style="max-height: 70%; max-width: 70%; position: relative;">
       </div>
       <div class="col-8" style="padding-left: 10%; display: flex; align-items: center;">
         <progress id="heroe" max="100" value="100"></progress>
